--- a/fetch/metadata/tools/templates/appcache-manifest.sub.https.html
+++ b/fetch/metadata/tools/templates/appcache-manifest.sub.https.html
@@ -38,11 +38,10 @@
 
   {%- for subtest in subtests %}
 
-  promise_test(() => {
+  async_test((t) => {
     const key = '{{uuid()}}';
-    assert_precondition(
-      !!window.applicationCache,
-      'Application Cache is not supported.'
+    assert_implements_optional(
+      !!window.applicationCache, 'Application Cache supported.'
     );
 
     return induceRequest(makeRequestURL(key, [% subtest.origins %]))
@@ -54,7 +53,8 @@
           assert_own_property(headers, '[%subtest.headerName%]');
           assert_equals(headers['[%subtest.headerName%]'], '[%subtest.expected%]');
         {%- endif %}
-    });
+      })
+      .then(() => t.done(), t.step_func((error) => { throw error; }));
   }, '[%subtest.headerName%][%subtest.description | pad("start", " - ")%]');
 
   {%- endfor %}
