--- a/fetch/metadata/tools/templates/element-area.sub.html
+++ b/fetch/metadata/tools/templates/element-area.sub.html
@@ -12,6 +12,7 @@
   <script src="/resources/testharnessreport.js"></script>
   {%- if subtests|selectattr('userActivated')|list %}
   <script src="/resources/testdriver.js"></script>
+  <script src="/resources/testdriver-vendor.js"></script>
   {%- endif %}
   <script src="/fetch/metadata/resources/helper.sub.js"></script>
   <body>
