fixup! [fetch] Replace metadata tests for history nav

--- a/fetch/metadata/tools/templates/window-history.sub.html
+++ b/fetch/metadata/tools/templates/window-history.sub.html
@@ -90,7 +90,7 @@
     mime: 'text/html',
     body: `<script>
       window.addEventListener('load', () => {
-        setTimeout(() => location.assign('${messageOpenerUrl}'))
+        set`+`Timeout(() => location.assign('${messageOpenerUrl}'));
       });
     <`+`/script>`
   };
